[ios] Center Title Label if no url in TableViewUrlCell

If no metadata label is set, alignment property of horizontal stack view should be fill so that the vertical stackview can fill entire vertical space.
If URLlabel has no text, then it should be hidden so that the title label can be centered within the vertical stackview.

Screenshots: https://drive.google.com/file/d/1rOS-DUahkcpX-Lk-iGB6IsYO8DZdKwiF/view?usp=sharing
https://drive.google.com/file/d/12Sl-CL00bCdi2atkM4HKl7XFWSAxNBNP/view?usp=sharing

Bug: 856620

Change-Id: I84b932600487fa17cc3aa2b55accbfc5d71d8eca
Reviewed-on: https://chromium-review.googlesource.com/1167745
Commit-Queue: Chris Lu <thegreenfrog@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582932}
Former-commit-id: 89ba39268d752cf1c4410e24ea073da13267bd71