ios/chrome/browser/ui/bookmarks/cells/bookmark_home_node_item.mm
@@ -61,6 +61,7 @@
       urlCell.URLLabel.text =
           base::SysUTF8ToNSString(_bookmarkNode->url().host());
       urlCell.accessibilityTraits |= UIAccessibilityTraitButton;
+      [urlCell configureUILayout];
     }
   } else {
     BookmarkTableCell* bookmarkCell =
