ios/chrome/browser/ui/history/history_entry_item.mm
@@ -56,13 +56,13 @@
   cell.titleLabel.text = self.text;
   cell.URLLabel.text = self.detailText;
   cell.metadataLabel.text = self.timeText;
-  cell.metadataLabel.hidden = ([self.timeText length] == 0);
   cell.faviconContainerView.backgroundColor = styler.tableViewBackgroundColor;
   cell.titleLabel.backgroundColor = styler.tableViewBackgroundColor;
   cell.URLLabel.backgroundColor = styler.tableViewBackgroundColor;
   cell.metadataLabel.backgroundColor = styler.tableViewBackgroundColor;
   cell.isAccessibilityElement = YES;
   cell.accessibilityCustomActions = self.accessibilityActions;
+  [cell configureUILayout];
 }
 
 - (NSString*)uniqueIdentifier {
